assets/css/main.scss
@use "global.scss";
$hamburger-layer-color: #fff !default;
// libs 
@import "~/node_modules/bootstrap/dist/css/bootstrap";
@import "~/node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";


// scss files 
@import "footer";
@import "index";
@import "menu";
@import "description";
@import "team";
@import "fonts";
@import "engcycle";


// use global.scss to store variables you use a lot. 

body,
html {
    display: block;
    position: relative;
}

html {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    margin: auto;
    overflow-y: scroll;
    padding: 0;
}

main {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    overflow: hidden;
    position: relative;
    width: 100%;
    z-index: 1;
}

body {
    font-family: global.$main-font;
    font: size 13px;
    color: #000000;
    line-height: 30px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    overflow-x: hidden;
    background-color: #f9f9f9;
    box-sizing: border-box;
    background-blend-mode: screen;

}

//    background: linear-gradient(#152B3E, transparent), linear-gradient(to bottom left, #152B3E, transparent), linear-gradient(to bottom right, #00619b, transparent);

.container {
    position: relative;
}

section {
    width: 100%;
    display: inline-block;
}

* {
    padding: 0px;
    margin: 0px;
}




#content-main {
    padding-top: 30px;
}

.bg-dark {
    background-color: #fff !important;
}

.bg-hero {
    background-color: #45b06cff;
}

.bg-section {
    background: url(https://placehold.co/1920x500) 50% no-repeat;
    background-size: auto;
    background-size: cover;
    height: 700px;
    padding: 80px 0;
}

.bg .header-text {
    position: absolute;
    font-size: 40px;
    left: 50%;
    top: 45%;
    transform: translateY(-50%);
    transform: translateX(-50%);
    color: white;
    text-shadow: 0 0 5px #000;

}

.wrapper {
    background: linear-gradient(#152B3E, #00619b);
}

// BG-SECTION media rules
@media screen and (max-width: 990px) {
    #section-nav {
        display: none;
    }
}

@media (min-width:990px) and (max-width:1180px) {
    .bg .header-text {
        left: 12.5vw;
        font-size: 50px;
        transform: translateX(0);
        text-shadow: 0 0 5px #000;
    }
}

@media screen and (min-width: 1180px) {
    .bg .header-text {
        left: 12.5vw;
        font-size: 60px;
        transform: translateX(0);
        text-shadow: 0 0 5px #000;

    }
}

.bg {
    position: relative;
    width: 100%;
    height: 40vh;
}



/* CALLOUT */
.bd-callout {
    padding: 1.25rem;
    margin-top: 1.25rem;
    margin-bottom: 1.25rem;
    border: 1px solid #e9ecef;
    border-left-width: .25rem;
    border-radius: .25rem
}

.bd-callout h4 {
    margin-bottom: .25rem
}

.bd-callout p:last-child {
    margin-bottom: 0
}

.bd-callout code {
    border-radius: .25rem
}

.bd-callout+.bd-callout {
    margin-top: -.25rem
}

.bd-callout-info {
    border-left-color: #5bc0de
}

.bd-callout-warning {
    border-left-color: #f0ad4e
}

.bd-callout-danger {
    border-left-color: #d9534f
}

/* Pema's code */

.list-unstyled {
    padding-left: 0;
    list-style: none;
}

.bold-italic {
    font-weight: bold;
    font-style: normal;
}

.underlined {
    text-decoration: underline;
}

.section-nav {
    padding-left: 0;
    margin-top: 40px;
    margin-bottom: 40px;
    display: none
}

@media(min-width:992px) {
    .section-nav {
        display: block;
    }
}

.section-nav {
    position: -webkit-sticky;
    position: sticky;
    padding: 10px;
    top: 75px;
    margin-top: 40px;
    margin-bottom: 40px;
    background-color: #16324F;
    transform: translateX(-22%);
}

.section-nav-header {
    font-size: .8rem;
    font-weight: bold;
    color: #fff;
    letter-spacing: 4px;
    text-transform: uppercase;
}

.section-nav a {
    font-size: 1.1em;
    text-decoration: none;
    color: #fff;
    transition: all .5s ease-in-out;
    line-height: 60px;
    display: block;
    font-weight: 60;
}

.section-nav-list {
    list-style: none;
    display: flex;
    flex-direction: column;
}

.section-nav h3 {
    font-weight: 600;
    font-size: 0.8rem;
    color: #fff;
    letter-spacing: 1px;
    text-transform: uppercase;
    transform: translateX(15%);
}

.section-nav a:hover,
.section-nav a:focus {
    color: #f2765d;
}

.section-nav li.active>a {
    color: #f2765d;
    font-weight: 500;
}

.hovering {
    cursor: pointer;
}

// backtoTop button //
#backToTop {
    display: black; // Initially hidden
    position: fixed;
    bottom: 15px;
    left: 8px;
    z-index: 99; // Make sure it appears on top of other elements
    border: none;
    outline: none;
    background-color: global.$color-coloblue; // Choose your desired background color
    color: white;
    cursor: pointer;
    padding: 10px;
    border-radius: 4px;
    font-size: 18px;

    &:hover {
        background-color: #228ecd; // Color when hovered
    }
}


// global wiki detail page rules

.p-sectionHeader__label {
    font-weight: bold;
    font-style: normal;
    color: #16324f;
}

